2015-08-29  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/autoconf.nanor: New file; syntax colouring for Autoconf.
	* src/files.c: Rewrap some lines and tweak two comments.

2015-08-16  Benno Schulenberg  <bensberg@justemail.net>
	* src/help.c (help_init, help_line_len): Avoid wide paragraphs of text
	in the help screens: wrap them at 74 columns if the screen is wider.
	* src/help.c (help_init): Reduce the scope of a variable.
	* src/help.c: Adjust some comments and whitespace.
	* src/help.c (do_help, do_help_void): Don't bother passing a function
	when it's used only once.
	* src/help.c (help_line_len): The wrap location can be beyond the EOL,
	so for determining the length of the current line, don't start at that
	location but at the beginning.  This fixes Savannah bug #45770.
	* src/help.c (help_line_len): Rename and reorder most of it.
	* src/nano.c (make_new_opennode), src/files.c (initialize_buffer):
	Remove some duplication in the initialization of a new openfile node.
	* src/nano.c (make_new_opennode): Don't bother setting things to NULL
	when they will be initialized right away.
	* src/files.c (make_new_buffer): Don't bother with a separate function
	when it's used only once, right there.
	* src/help.c (help_init): Since the new SIGWINCH handling, a resizing
	of the window will no longer break out of the help viewer, so there is
	no need any more for an extra freeing of the help text.

2015-08-13  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_find_bracket): Remove mistaken comparison between
	pointer and literal character.  Found with cppcheck.
	* src/browser.c (browser_init): Speed up the finding of the longest
	filename: don't limit the value to that of COLS all the time, as this
	is done later anyway, and don't bother skipping the dot entry.
	* src/global.c (shortcut_init): In restricted mode, allow changing
	the file format, but actually disable Appending, Prepending, making
	Backups, and opening the File Browser.
